Fix body overflow style and clean up commented code in impressum.css

--- a/css/impressum.css
+++ b/css/impressum.css
@@ -1,8 +1,7 @@
 body {
-	overflow-y: scroll;
+	overflow-y: auto;
 	font-family: "Open Sans", sans-serif;
 	font-size: 16px;
-	/* overflow-y: auto; */
 }
 
 .header-fix {
@@ -18,19 +17,6 @@ body {
 	padding: 79px;
 	margin: 0 0 0 232px;
 }
-
-/* .sec-sidebar {
-	position: fixed;
-	width: 232px;
-	height: 100vh;
-	box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
-	background-color: #ffffff;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
-	padding: 124px 23px 66px 23px;
-} */
 
 .sidebar-footer,
 a {
@@ -131,7 +117,12 @@ ul {
 @media (max-width: 1025px) {
 	.main-wrapper-ds {
 		padding: 20px;
-		/* margin-left: 0; */
 		margin: 0px;
+	}
+}
+
+@media (max-width: 850px) {
+	.back-help {
+		margin-top: 64px;
 	}
 }
